<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan" />

    <Button
        android:id="@+id/short_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/short_vibrate"
        app:layout_constraintTop_toBottomOf="@id/scan" />

    <Button
        android:id="@+id/long_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_vibrate"
        app:layout_constraintTop_toBottomOf="@id/short_vibrate" />

    <Button
        android:id="@+id/no_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_stop"
        app:layout_constraintTop_toBottomOf="@id/long_vibrate" />

    <Button
        android:id="@+id/stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        app:layout_constraintTop_toBottomOf="@id/no_stop" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/steps"
        app:layout_constraintTop_toBottomOf="@id/stop" />

    <TextView
        android:id="@+id/power"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/power"
        app:layout_constraintTop_toBottomOf="@id/steps" />

    <TextView
        android:id="@+id/connect_state"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/connect_state"
        app:layout_constraintTop_toBottomOf="@id/power" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/device_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/connect_state" />

</android.support.constraint.ConstraintLayout>